General update, questions and answers added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page1">
+    <header>
+    <div class="scoreBox"><a class="scoreLink" href="scoreboard.html">High Scores</a></div>
+    <div class="timer">Time: </div>
+    </header>
+    <h1>Welcome to The Coding Quiz</h1>
+    <div class="startButton"><button>Start</button></div>  
+    <div class="question"></div>
+    <div class="answers">
+        <div id="possible1"></div>
+        <div id="possible2"></div>
+        <div id="possible3"></div>
+        <div id="possible4"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
