--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <div class="scoreBox"><a class="scoreLink" href="scoreboard.html">High Scores</a></div>
     <div class="timer">Time: </div>
     </header>
-    <h1>Welcome to The Coding Quiz</h1>
+    <h1 class="title">Welcome to The Coding Quiz</h1>
     <div class="startButton"><button>Start</button></div>  
+
     <div class="question"></div>
+
     <div class="answers">
-        <div id="possible1"></div>
-        <div id="possible2"></div>
-        <div id="possible3"></div>
-        <div id="possible4"></div>
+        <div id="possible1" data-letter="A" ></div>
+        <div id="possible2" data-letter="B" ></div>
+        <div id="possible3" data-letter="C"></div>
+        <div id="possible4" data-letter="D"></div>
+
+    </div>
+    <div class ="correct">
     </div>
     <script src="script.js"></script>
 </body>
