--- a/scoreboard.html
+++ b/scoreboard.html
@@ -11,7 +11,7 @@
     <div class="ScoreDisplay">
 
     </div>
-    <div class="tryAgain"><button>Try Again</button></div>
+    <div class="tryAgain"><a href = index.html><button>Try Again</button></div></a>
     <script src="script.js"></script>
 </body>
 </html>
