local storgae update

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     </div>
     <div class ="correct">
     </div>
+    <div class ="viewScores"><a href="scoreboard.html"><button>View Scores</button></a></div>
+    <div class ="saveScores"><button>Save Score</button></a></div>
+
+    <div class="modal">
+        <div class="modalContent">
+           <a href ="scoreboard.html" ><button class="close">close</button></a>
+            <input type="text" name="initials" class="textInput">
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
