--- a/scoreboard.html
+++ b/scoreboard.html
@@ -12,6 +12,6 @@
 
     </div>
     <div class="tryAgain"><a href = index.html><button>Try Again</button></div></a>
-    <script src="script.js"></script>
+    <script src="score.js"></script>
 </body>
 </html>
